// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrevNextBar /> should render 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):active,
.c2:not([disabled]):focus {
  background: #fbfcfd;
  color: #18181c;
}

.c2[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c4 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c4:not([disabled]):hover,
.c4:not([disabled]):active,
.c4:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c4[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c1 {
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  margin-left: auto;
}

.c3 {
  margin-right: auto;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <button
      class="c2 c3"
      type="button"
    >
      Précédent
    </button>
    <button
      class="c4 c5"
    >
      Suivant
    </button>
  </div>
</div>
`;

exports[`<PrevNextBar /> should render disabled buttons 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):active,
.c2:not([disabled]):focus {
  background: #fbfcfd;
  color: #18181c;
}

.c2[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c4 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c4:not([disabled]):hover,
.c4:not([disabled]):active,
.c4:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c4[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c1 {
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  margin-left: auto;
}

.c3 {
  margin-right: auto;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <button
      class="c2 c3"
      type="button"
    >
      Précédent
    </button>
    <button
      class="c4 c5"
      disabled=""
    >
      Suivant
    </button>
  </div>
</div>
`;

exports[`<PrevNextBar /> should render only next button 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):active,
.c2:not([disabled]):focus {
  background: #fbfcfd;
  color: #18181c;
}

.c2[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c4 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #005994;
  border-color: #005994;
}

.c4:not([disabled]):hover,
.c4:not([disabled]):active,
.c4:not([disabled]):focus {
  background: #0068ae;
  color: #fff;
}

.c4[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c1 {
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  margin-left: auto;
}

.c3 {
  margin-right: auto;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <button
      class="c2 c3"
      type="button"
    >
      Précédent
    </button>
    <button
      class="c4 c5"
    >
      Suivant
    </button>
  </div>
</div>
`;

exports[`<PrevNextBar /> should render only prev button 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  padding: 0.625rem 1.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c2:not([disabled]):hover,
.c2:not([disabled]):active,
.c2:not([disabled]):focus {
  background: #fbfcfd;
  color: #18181c;
}

.c2[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c1 {
  margin: 2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  margin-right: auto;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <button
      class="c2 c3"
      type="button"
    >
      Précédent
    </button>
  </div>
</div>
`;
